updated names within files

--- a/cfg/bug_other.cfg
+++ b/cfg/bug_other.cfg
@@ -1,8 +1,8 @@
 // also taken from rgl
 
-exec "bug_base"
+exec "BUG_base"
 
-servercfgfile "bug_other" // sets server cfg to this config so that it gets autoexeced on level change
+servercfgfile "BUG_other" // sets server cfg to this config so that it gets autoexeced on level change
 
 mp_timelimit "0"            // unsets server timelimit
 mp_winlimit "0"             // unsets win limit
