--- a/cfg/bug_5cp.cfg
+++ b/cfg/bug_5cp.cfg
@@ -1,8 +1,8 @@
 // also taken from rgl
 
-exec "bug_base"
+exec "BUG_base"
 
-servercfgfile "bug_5cp" // sets server cfg to this config so that it gets autoexeced on level change
+servercfgfile "BUG_5cp" // sets server cfg to this config so that it gets autoexeced on level change
 
 mp_timelimit "30"            // sets server timelimit
 mp_winlimit "5"             // sets number of wins to win to 2
