--- a/cfg/bug_koth.cfg
+++ b/cfg/bug_koth.cfg
@@ -1,8 +1,8 @@
 // also taken from rgl
 
-exec "bug_base"
+exec "BUG_base"
 
-servercfgfile "bug_koth" // sets server cfg to this config so that it gets autoexeced on level change
+servercfgfile "BUG_koth" // sets server cfg to this config so that it gets autoexeced on level change
 
 mp_timelimit "0"            // unsets server timelimit
 mp_winlimit "2"             // sets number of wins to win each half to 2
