fixed small issues wherein other bugs were renamed to BUG

--- a/cfg/BUG_reset.cfg
+++ b/cfg/BUG_reset.cfg
@@ -5,10 +5,10 @@
 // Only exec this after waiting 90 seconds after game end!
 
 tv_stoprecord                                // stops stv recording
-                                             // tv_stop *DOESNT* stop stv bot because STV in TF2 is incredibly BUGgy and reads the wrong values from the wrong cvars
+                                             // tv_stop *DOESNT* stop stv bot because STV in TF2 is incredibly buggy and reads the wrong values from the wrong cvars
                                              // read more at https://github.com/ValveSoftware/Source-1-Games/issues/2778
 
-// sv_visiblemaxplayers "-1"                 // doesn't reset visible maxplayers because of above BUGgyness with stv.
+// sv_visiblemaxplayers "-1"                 // doesn't reset visible maxplayers because of above buggyness with stv.
 
 log off                                      // turns off server log
 log_verbose_enable "0"                       // disables verbose server log
