--- a/cfg/BUG_base.cfg
+++ b/cfg/BUG_base.cfg
@@ -4,7 +4,7 @@
 // TF2 Comp Fixes
 sm_deterministic_fall_damage                1
 sm_fix_ghost_crossbow_bolts                 1
-sm_fix_slope_BUG                            1
+sm_fix_slope_bug                            1
 sm_fix_sticky_delay                         1
 sm_gunboats_always_apply                    0
 sm_projectiles_ignore_teammates             0
